# redlock-cli

./: .gitignore  .travis.yml  Cargo.toml  README.md
ci/: prep_deploy.sh
src/: main.rs  redlock.rs
