[package]
name = "redlock-cli"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2018"

[[bin]]
name = "redlock"
path = "src/main.rs"

[dependencies]
colored = "1.8.0"
ctrlc = "3.1.3"
env_logger = "0.7.1"
log = "0.4.8"
redis = "0.13.0"
structopt = "0.3.3"
uuid = { version = "0.8.1", features = ["v4"] }
