[package]
name = "redlock-cli"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2018"

[[bin]]
name = "redlock"
path = "src/main.rs"

[dependencies]
colored = "2.0.0"
ctrlc = "3.2.2"
env_logger = "0.9.0"
log = "0.4.17"
redis = "0.21.5"
structopt = "0.3.26"
uuid = { version = "1.1.1", features = ["v4"] }
